# haskell-exceptions-checked

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  Setup.hs  build.nix  cabal.project  config.nix  default.nix  exceptions-checked.cabal  shell.nix  stack.yaml
nix/: default.nix  sources.json
nix/materialized/: default.nix
nix/materialized/.plan.nix/: cabal-doctest.nix  exceptions-checked.nix
run/: test
src/Control/Exception/: Checked.hs
test/: Main.hs  doctests.hs
test/Doctest/Checked/: Catch.hs  Throw.hs
test/Specs/: Checked.hs
