name: exceptions-checked
version: 0.0.1
synopsis: Safe, type-level accounting of exceptions
description:
    Safe, type-level accounting of synchronous exceptions.  Adapts the approach
    of Pepe Iborra's control-monad-exception package to use the safe-exceptions
    package.
category: Control
stability: Unspecified
homepage: https://github.com/shajra/exceptions-checked#readme
bug-reports: https://github.com/shajra/exceptions-checked/issues
author: Sukant Hajra, Pepe Iborra
maintainer: Sukant Hajra <rrudbskr5g@snkmail.com>
copyright: (c) 2018 Sukant Hajra
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.10
tested-with: GHC == 8.4.3

source-repository head
    type: git
    location: https://github.com/shajra/exceptions-checked

library
    hs-source-dirs: src
    ghc-options: -Wall -Werror
    build-depends:
        base
      , safe-exceptions
      , mtl
    exposed-modules:
        Control.Exception.Checked
    default-language: Haskell2010

test-suite specs
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    other-modules: Specs.Checked
    ghc-options: -Wall
    build-depends:
        base
      , exceptions-checked
      , hspec
      , should-not-typecheck
    default-language: Haskell2010
